--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-./data/
-__pycache__
-.ipynb_checkpoints
-.DS_Store
+data/
+**/__pycache__/
+**/.ipynb_checkpoints
+**/.DS_Store
 .idea
-.pyc
+**/.pyc
 Untitled.ipynb
+
